# dbt-snow-cortex

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  dbt_project.yml  pyproject.toml
integration_tests/: dbt_project.yml  profiles.yml.example
integration_tests/models/: sample_search_model.sql  schema.yml
macros/: operations.sql  search_service.sql  semantic_view.sql
scripts/: sync_semantic_view_yaml.py
