[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-snow-cortex-hooks"
version = "0.1.0"
description = "Pre-commit hook support files for dbt-snow-cortex"
requires-python = ">=3.9"

[tool.setuptools]
packages = []
py-modules = []

[tool.sqlfluff.core]
dialect = "snowflake"
max_line_length = 120

[tool.sqlfluff.indentation]
tab_space_size = 2
